--- a/Project/index.html
+++ b/Project/index.html
@@ -163,7 +163,7 @@
 									<input class="rsvp" type="text" value="Last Name">
 									<input class="rsvp" type="text" value="Email Address">
 									<input class="rsvp" type="text" value="Phone Number">
-									<div class=form-spacer">
+									<div class="form-spacer">
 										<label class="terms">Terms and Conditions</label>
 									</div>
 									<div>
