--- a/Project/Basic_HTML_Template.html
+++ b/Project/Basic_HTML_Template.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>Basic HTML Template</title>
+        <link rel="stylesheets" href="">
+        <link rel="stylesheets" href="">
     </head>
     <body>
 
