--- a/One-Page Website/one_page_website.html
+++ b/One-Page Website/one_page_website.html
@@ -4,6 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>The Game of Noodles</title>
+		<link rel="stylesheet" href="./CSS/one_page_website.css">
 	</head>
 	
 	<header>
